--- a/doxygen docs/latex/tetris_game_8h_source.tex
+++ b/doxygen docs/latex/tetris_game_8h_source.tex
@@ -13,7 +13,8 @@
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#define\ TETRISGAME\_H\_}}
 \DoxyCodeLine{00010\ }
 \DoxyCodeLine{00011\ \textcolor{keywordtype}{int}\ tetrisGame();}
-\DoxyCodeLine{00012\ }
-\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISGAME\_H\_\ */}\textcolor{preprocessor}{}}
+\DoxyCodeLine{00012\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{tetris_game_8c_a2c55dad3d3336ee657f1bf1a4c896978}{reduceFallDelay}}();}
+\DoxyCodeLine{00013\ }
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ TETRISGAME\_H\_\ */}\textcolor{preprocessor}{}}
 
 \end{DoxyCode}
