--- a/doxygen docs/latex/tetris_leveling_8c.tex
+++ b/doxygen docs/latex/tetris_leveling_8c.tex
@@ -5,7 +5,8 @@
 \+: Program for Tetris Leveling system  
 
 
-{\ttfamily \#include "{}../tetris\+Game/tetris\+Leveling.\+h"{}}\newline
+{\ttfamily \#include "{}tetris\+Leveling.\+h"{}}\newline
+{\ttfamily \#include "{}tetris\+Game.\+h"{}}\newline
 \doxysubsubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
