--- a/doxygen docs/latex/tetris_scoring_8c.tex
+++ b/doxygen docs/latex/tetris_scoring_8c.tex
@@ -5,7 +5,7 @@
 \+: Program for Tetris Scoring system  
 
 
-{\ttfamily \#include "{}../tetris\+Game/tetris\+Scoring.\+h"{}}\newline
+{\ttfamily \#include "{}tetris\+Scoring.\+h"{}}\newline
 {\ttfamily \#include "{}ssd1306\+\_\+fonts.\+h"{}}\newline
 {\ttfamily \#include "{}ssd1306.\+h"{}}\newline
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
