--- a/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
+++ b/doxygen docs/latex/struct_t_e_t_r_a_m_i_n_o___a_t_m.tex
@@ -1,20 +1,20 @@
-\doxysection{TETRAMINO\+\_\+\+ATM Struct Reference}
-\hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m}{}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m}\index{TETRAMINO\_ATM@{TETRAMINO\_ATM}}
+\hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m}{}\doxysection{TETRAMINO\+\_\+\+ATM Struct Reference}
+\label{struct_t_e_t_r_a_m_i_n_o___a_t_m}\index{TETRAMINO\_ATM@{TETRAMINO\_ATM}}
 
 
 Structure to locate the current tetramino in the game.  
 
 
-\doxysubsubsection*{Public Attributes}
+\doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_ae1ad9af117ead17b5a40628698f1244a}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_ae1ad9af117ead17b5a40628698f1244a} 
+\mbox{\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_ae1ad9af117ead17b5a40628698f1244a}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_ae1ad9af117ead17b5a40628698f1244a}} 
 int {\bfseries coordY}
 \item 
-\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_a62bba8507ecc37c0d676c9bc3624847b}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_a62bba8507ecc37c0d676c9bc3624847b} 
+\mbox{\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_a62bba8507ecc37c0d676c9bc3624847b}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_a62bba8507ecc37c0d676c9bc3624847b}} 
 int {\bfseries coordX}
 \item 
-\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_a7763d9ea72003279fcd463d68ed47161}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_a7763d9ea72003279fcd463d68ed47161} 
+\mbox{\Hypertarget{struct_t_e_t_r_a_m_i_n_o___a_t_m_a7763d9ea72003279fcd463d68ed47161}\label{struct_t_e_t_r_a_m_i_n_o___a_t_m_a7763d9ea72003279fcd463d68ed47161}} 
 int {\bfseries piece} \mbox{[}4\mbox{]}\mbox{[}4\mbox{]}
 \end{DoxyCompactItemize}
 
@@ -24,4 +24,4 @@ Structure to locate the current tetramino in the game.
 
 The documentation for this struct was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
-C\+:/\+Users/pontet/\+Documents/\+Git\+\_\+\+Repos/\+Tetris\+\_\+\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/\mbox{\hyperlink{tetris_game_8c}{tetris\+Game.\+c}}\end{DoxyCompactItemize}
+C\+:/\+Users/kerfriden.\+APOLLO2/\+Documents/\+Tetris-\/\+STM/\+Tetris-\/\+STM/\+Tetris\+\_\+\+STM\+\_\+code/tetris\+Game/tetris\+Game.\+c\end{DoxyCompactItemize}
